<resources>
    <string name="app_name">ProtectorApp</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">login</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="add_numbers">Add numbers</string>
    <string name="signout">signOut</string>
    <string name="hotline">Hotline</string>
    <string name="friends_and_family">Friends and Family</string>
    <string name="submit">submit</string>

    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="enter_your_phone_number">Enter Your phone number</string>
    <string name="my_number">My Number</string>
    <string name="your_number">Your number:</string>
    <string name="friends_and_family_double_tap_to_open_contacts">Friends and family:Double tap to open contacts</string>

    <string name="hotline_double_tap_to_open_contacts">hotline:Double tap to open contacts</string>
    <string name="latitude_updating">latitude: Updating...</string>
    <string name="longitude_updating">longitude: Updating...</string>
    <string name="location_name_updating">Location name: Updating...</string>
    <string name="address_updating">address: Updating...</string>
    <string name="notification">notification</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
</resources>
